# GenUI-Education

./: Adaptive UI for personalized learning_2026-06-04 23_04_51.md  Pre-built component library for KSSM SPM interactive learning_2026-06-05 13_16_41.md  README.md  setup.md
Synapse/backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
Synapse/backend/app/: __init__.py  config.py  main.py
Synapse/backend/app/agents/: __init__.py  component_composer.py  diagnostician.py  graph.py  pedagogy_strategist.py  tutor_loop.py
Synapse/backend/app/api/: __init__.py  routes.py
Synapse/backend/app/components/: __init__.py  registry.py
Synapse/backend/app/knowledge/: __init__.py  (+1 more)
Synapse/backend/tests/: test_p1.py  test_p3.py  test_pipeline.py
sidequest/backend/: Dockerfile  alembic.ini  config.py  main.py  postprocess.py  pyproject.toml  requirements.txt
sidequest/backend/api/: ask.py
sidequest/backend/db/: models.py  session.py
sidequest/backend/graph/: build.py  context.py  errors.py  state.py
sidequest/backend/prompts/: explainer.md  generator.md  planner.md  router.md  verifier.md
sidequest/backend/schemas/: __init__.py  events.py  intent.py  plan.py  verifier.py
sidequest/backend/services/: background.py  delivery.py  llm.py  local_router.py  messages.py  prompts.py  traces.py
sidequest/backend/tests/: conftest.py  test_artifact_branch.py  test_ask_endpoint.py  test_config.py  test_delivery_gate.py  test_events.py  test_intent.py  test_local_router.py  test_postprocess.py  test_prompts.py  test_router_parse.py  test_verifier.py
(+208 files in other folders)
