[project]
name = "synapse-backend"
version = "0.1.0"
description = "Synapse — visible multi-agent pedagogical pipeline for KSSM SPM science (FastAPI + LangGraph)"
readme = "../README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "sse-starlette>=2.1",
    "langgraph>=0.2.50",
    "python-dotenv>=1.0",
    # Anthropic Claude is the live primary (D-14); the router lazy-imports it and degrades
    # gracefully if it's absent or ANTHROPIC_API_KEY is unset.
    "anthropic>=0.40",
    # OpenAI is the configured fallback — uncomment when wiring the fallback adapter (P1):
    # "openai>=1.50",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "ruff>=0.7",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.pytest.ini_options]
testpaths = ["tests"]
